login overflow fixed

--- a/login.css
+++ b/login.css
@@ -34,6 +34,8 @@ body {
   display: flex;
   flex-direction: column;
   animation: fadeInPage 1s ease forwards;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 /* === HEADER SECTION === */
@@ -58,7 +60,7 @@ body {
 
 /* === LOGIN SECTION === */
 .login-section {
-  background-color: var(--primary-green);
+  background-color: #647a46;
   padding: 1rem 1.5rem 4rem;
   position: relative;
   border-top-left-radius: 30px;
@@ -72,7 +74,7 @@ body {
   left: -25%;
   width: 150%;
   height: 300px;
-  background-color: var(--primary-green);
+  background-color: #647a46;
   border-radius: 100%;
 }
 
